# C-Projects

./: README.md
Hangman/: CMakeLists.txt  main  main.c  text.txt
Storage/: CMakeLists.txt  database.csv  main.c
chess/: CMakeLists.txt  main.c
